fix checkbox alignment

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,41 +1,41 @@
-﻿html
-{
+﻿html {
     position: relative;
     min-height: 100%;
 }
 
-body
-{
+body {
     padding-top: 55px;
     margin-bottom: 20px;
 }
 
-footer
-{
+footer {
     position: absolute;
     bottom: 0;
     width: 100%;
     height: 20px;
     font-size: 11px;
-    text-align:center;
+    text-align: center;
 }
 
-.checkbox
-{
+.checkbox {
     margin-right: 6px;
     margin-left: 8px;
-    font-size: 12px;
-    font-weight: normal;
-    white-space: nowrap;    
+    margin-top: 2px;
+    margin-bottom: 2px;
 }
 
-.checkbox, .dropdown a
-{
+    .checkbox label {
+        font-size: 12px;
+        font-weight: normal;
+        white-space: nowrap;
+        line-height: 20px;
+    }
+
+.checkbox, .dropdown a {
     cursor: pointer;
 }
 
-.chart-container
-{
+.chart-container {
     height: 200px;
     padding: 5px;
     margin: 15px auto 15px auto;
@@ -45,13 +45,11 @@ footer
     box-shadow: 0 3px 10px rgba(0,0,0,0.15);
 }
 
-    .chart-container .legendLabel
-    {
+    .chart-container .legendLabel {
         font-size: 11px;
     }
 
-    .chart-container .close
-    {
+    .chart-container .close {
         position: absolute;
         top: 16px;
         right: 16px;
@@ -60,62 +58,52 @@ footer
         opacity: 0.2;
     }
 
-        .chart-container .close:hover
-        {
+        .chart-container .close:hover {
             opacity: 1;
         }
 
-    .chart-container label
-    {
+    .chart-container label {
         font-size: 11px;
         line-height: 18px;
     }
 
-    .chart-container .center-block
-    {
+    .chart-container .center-block {
         text-align: center;
     }
 
-.axisLabel
-{
+.axisLabel {
     position: absolute;
     font-size: 11px;
-    text-align: center;    
+    text-align: center;
 }
 
-.xaxisLabel
-{
+.xaxisLabel {
     bottom: 0;
     width: 100%;
-    text-align: center;    
+    text-align: center;
 }
 
-.yaxisLabel
-{
+.yaxisLabel {
     top: 50%;
     left: 2px;
     transform: rotate(-90deg);
     transform-origin: 0 0;
 }
 
-.healthy
-{
+.healthy {
     color: #05d116 !important;
 }
 
-.unhealthy
-{
+.unhealthy {
     font-weight: bold;
     color: #ff1c1c !important;
 }
 
-.health-status
-{
+.health-status {
     word-wrap: normal;
 }
 
-.error-report p
-{
+.error-report p {
     padding: 15px;
     text-align: center;
 }
